# gazebo_ros_dc_motor

./: CMakeLists.txt  package.xml
include/: nowmath.h
include/gazebo_ros_motors/: backlash.h  bldcmotor_foc.h  gazebo_ros_bldc_motor.h  gazebo_ros_dc_motor.h  gazebo_ros_link_torque.h  rk45.h  system.h
params/: bldc_motor.yaml  bldc_motor_ros.yaml  dc_motor.yaml  dc_motor_ros.yaml
src/: backlash.cpp  bldcmotor_foc.cpp  gazebo_ros_bldc_motor.cpp  gazebo_ros_dc_motor.cpp  gazebo_ros_link_torque.cpp
xacro/: motor.xacro  test.xacro  test_bldc.xacro  test_dc_motor.xacro  test_torque.xacro  torque.xacro
